{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 35,
  "lineage": "2c5f3fcf-1906-4d10-5506-d737a90117da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-005f5b6ea84639188",
            "domain": "vpc",
            "id": "eipalloc-005fe667d370a822e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02ead3972a899d47d",
            "private_dns": "ip-10-168-168-165.ec2.internal",
            "private_ip": "10.168.168.165",
            "public_dns": "ec2-3-90-98-15.compute-1.amazonaws.com",
            "public_ip": "3.90.98.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477815173:loadbalancer/wordpress-load-balancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1e"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "wordpress-load-balancer-1311585709.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "wordpress-load-balancer",
            "idle_timeout": 400,
            "instances": [
              "i-05da50e5742b18c06",
              "i-0652b588ebecd2c53"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "wordpress-load-balancer",
            "security_groups": [
              "sg-047fddc96917cf293"
            ],
            "source_security_group": "988477815173/allow http and https to elb",
            "source_security_group_id": "sg-047fddc96917cf293",
            "subnets": [
              "subnet-0c4f601fc1567414b",
              "subnet-0f8a5c1a9ecdf553e"
            ],
            "tags": {
              "Name": " wordpress load balancer"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.public",
            "data.aws_ami.ubuntu",
            "aws_instance.wordpress2",
            "aws_network_interface.wrordpress_1",
            "aws_network_interface.wrordpress_2",
            "aws_security_group.wordpress-sg",
            "aws_subnet.private",
            "aws_vpc.wordpress_production",
            "aws_instance.wordpress1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddbdea833a8d2f0d",
            "arn": "arn:aws:ec2:us-east-1:988477815173:instance/i-0df34d237ba66c904",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df34d237ba66c904",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "epam-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a364de1dac214fb5"
              }
            ],
            "primary_network_interface_id": "eni-0a364de1dac214fb5",
            "private_dns": "ip-10-168-168-219.ec2.internal",
            "private_ip": "10.168.168.219",
            "public_ip": "54.210.52.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c40a044c43e86b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8a5c1a9ecdf553e",
            "tags": {
              "Name": "bastion server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c390a62ebbe66f65"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "aws_network_interface.bastion",
            "aws_security_group.bastion-sg",
            "aws_subnet.public",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddbdea833a8d2f0d",
            "arn": "arn:aws:ec2:us-east-1:988477815173:instance/i-05da50e5742b18c06",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05da50e5742b18c06",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "epam-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04ac517d6b158950d"
              }
            ],
            "primary_network_interface_id": "eni-04ac517d6b158950d",
            "private_dns": "ip-10-168-30-165.ec2.internal",
            "private_ip": "10.168.30.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023e84426799cfe23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4f601fc1567414b",
            "tags": {
              "Name": "wordpress_server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852df7b24ea24b72"
            ]
          },
          "dependencies": [
            "aws_vpc.wordpress_production",
            "data.aws_ami.ubuntu",
            "aws_network_interface.wrordpress_1",
            "aws_security_group.wordpress-sg",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddbdea833a8d2f0d",
            "arn": "arn:aws:ec2:us-east-1:988477815173:instance/i-0652b588ebecd2c53",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0652b588ebecd2c53",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "epam-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d9b496f3728d71e5"
              }
            ],
            "primary_network_interface_id": "eni-0d9b496f3728d71e5",
            "private_dns": "ip-10-168-30-172.ec2.internal",
            "private_ip": "10.168.30.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0f69351af71f47a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4f601fc1567414b",
            "tags": {
              "Name": "wordpress_server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0852df7b24ea24b72"
            ]
          },
          "dependencies": [
            "aws_security_group.wordpress-sg",
            "aws_subnet.private",
            "aws_vpc.wordpress_production",
            "data.aws_ami.ubuntu",
            "aws_network_interface.wrordpress_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:internet-gateway/igw-04ee93f55c925aacf",
            "id": "igw-04ee93f55c925aacf",
            "owner_id": "988477815173",
            "tags": {
              "Name": "load_balancer"
            },
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005fe667d370a822e",
            "id": "nat-00c4fd273c8edfb0d",
            "network_interface_id": "eni-02ead3972a899d47d",
            "private_ip": "10.168.168.165",
            "public_ip": "3.90.98.15",
            "subnet_id": "subnet-0f8a5c1a9ecdf553e",
            "tags": {
              "Name": "nat gateway"
            }
          },
          "dependencies": [
            "aws_eip.static",
            "aws_subnet.public",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-047d239da00d9bb58",
                "device_index": 0,
                "instance": "i-0df34d237ba66c904"
              }
            ],
            "id": "eni-0a364de1dac214fb5",
            "ipv6_address_count": 0,
            "mac_address": "06:5e:be:87:e1:bd",
            "private_ip": "10.168.168.219",
            "private_ips": [
              "10.168.168.219"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c390a62ebbe66f65"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8a5c1a9ecdf553e",
            "tags": {
              "Name": "bastion server interface"
            }
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_subnet.public",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "wrordpress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0aa660606dd8cc2c0",
                "device_index": 0,
                "instance": "i-05da50e5742b18c06"
              }
            ],
            "id": "eni-04ac517d6b158950d",
            "ipv6_address_count": 0,
            "mac_address": "02:b3:d4:14:73:47",
            "private_ip": "10.168.30.165",
            "private_ips": [
              "10.168.30.165"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0852df7b24ea24b72"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4f601fc1567414b",
            "tags": {
              "Name": "wordpress1 network interface"
            }
          },
          "dependencies": [
            "aws_security_group.wordpress-sg",
            "aws_subnet.private",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "wrordpress_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a9766e4258023974",
                "device_index": 0,
                "instance": "i-0652b588ebecd2c53"
              }
            ],
            "id": "eni-0d9b496f3728d71e5",
            "ipv6_address_count": 0,
            "mac_address": "02:24:b4:71:d9:13",
            "private_ip": "10.168.30.172",
            "private_ips": [
              "10.168.30.172"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0852df7b24ea24b72"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4f601fc1567414b",
            "tags": {
              "Name": "wordpress2 network interface"
            }
          },
          "dependencies": [
            "aws_security_group.wordpress-sg",
            "aws_subnet.private",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ptivate_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:route-table/rtb-00ea4dd44acd3dc17",
            "id": "rtb-00ea4dd44acd3dc17",
            "owner_id": "988477815173",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00c4fd273c8edfb0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table"
            },
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:route-table/rtb-0be400716a0e35a0b",
            "id": "rtb-0be400716a0e35a0b",
            "owner_id": "988477815173",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ee93f55c925aacf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea7d393a1d73ad29",
            "route_table_id": "rtb-00ea4dd44acd3dc17",
            "subnet_id": "subnet-0c4f601fc1567414b"
          },
          "dependencies": [
            "aws_route_table.ptivate_route_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.wordpress_production",
            "aws_eip.static",
            "aws_nat_gateway.nat_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdd1d52367899427",
            "route_table_id": "rtb-0be400716a0e35a0b",
            "subnet_id": "subnet-0f8a5c1a9ecdf553e"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public",
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:security-group/sg-0c390a62ebbe66f65",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c390a62ebbe66f65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow ssh to bastion",
            "name_prefix": "",
            "owner_id": "988477815173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:security-group/sg-0576681e071c6d433",
            "description": "allow to database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0576681e071c6d433",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.168.30.0/24"
                ],
                "description": "databace from private",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow to db",
            "name_prefix": "",
            "owner_id": "988477815173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:security-group/sg-047fddc96917cf293",
            "description": "Allow http and https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047fddc96917cf293",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http and https from public",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http and https from public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow http and https to elb",
            "name_prefix": "",
            "owner_id": "988477815173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow http and https worldwire"
            },
            "timeouts": null,
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:security-group/sg-0852df7b24ea24b72",
            "description": "Allow http and https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0852df7b24ea24b72",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.168.168.0/24"
                ],
                "description": "allow http and https from public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.168.168.0/24"
                ],
                "description": "allow http and https from public",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.168.168.0/24"
                ],
                "description": "allow http and https from public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow http and ssl to bastion",
            "name_prefix": "",
            "owner_id": "988477815173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow http and https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:subnet/subnet-00e5fe6e8cb781f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.168.50.0/24",
            "id": "subnet-00e5fe6e8cb781f89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988477815173",
            "tags": {
              "Name": "rds"
            },
            "tags_all": {
              "Name": "rds"
            },
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:subnet/subnet-0c4f601fc1567414b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.168.30.0/24",
            "id": "subnet-0c4f601fc1567414b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988477815173",
            "tags": {
              "Name": "web_servers"
            },
            "tags_all": {
              "Name": "web_servers"
            },
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:subnet/subnet-0f8a5c1a9ecdf553e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.168.168.0/24",
            "id": "subnet-0f8a5c1a9ecdf553e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988477815173",
            "tags": {
              "Name": "load_balancer"
            },
            "tags_all": {
              "Name": "load_balancer"
            },
            "vpc_id": "vpc-0511cc5b3f4749e0f"
          },
          "dependencies": [
            "aws_vpc.wordpress_production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477815173:vpc/vpc-0511cc5b3f4749e0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.168.0.0/16",
            "default_network_acl_id": "acl-04970a0c77f79b773",
            "default_route_table_id": "rtb-0a192713659f32449",
            "default_security_group_id": "sg-07cb6e77792abc84b",
            "dhcp_options_id": "dopt-f0c6998a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0511cc5b3f4749e0f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a192713659f32449",
            "owner_id": "988477815173"
          }
        }
      ]
    }
  ]
}